# Genetic-Algorithm

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
data/: data.txt
lib/: CMakeLists.txt
lib/include/: candidate.h  fitness.h  generation.h  term.h
lib/src/: candidate.cpp  fitness.cpp  generation.cpp  term.cpp  test.cpp
